# gapless-app

./: .gitattributes  .gitignore  LICENSE  README.md  pubspec.yaml
.codex/environments/: environment.toml
.github/workflows/: release-macos.yml  release.yml  verify.yml  windows-process-host.yml
.superpowers/sdd/: final-review-followup-fixes-report.md  task-9-report.md
assets/engine/: manifest.json
assets/fonts/: SHA256SUMS
docs/: building.md
integration_test/: editor_workflow_test.dart  recovery_workflow_test.dart
integration_test/support/: installed_editor_driver.dart
lib/: main.dart
lib/app/: app_dependencies.dart  gapless_app.dart  installed_smoke_test.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native/process_host/windows/: CMakeLists.txt  process_host.cpp
packaging/linux/: AppRun  gapless.desktop  package_appimage.sh
packaging/macos/: package_dmg.sh
packaging/windows/: gapless.iss
script/: build_and_run.sh
test/accessibility/: editor_accessibility_test.dart
test/app/: app_dependencies_update_test.dart  gapless_app_test.dart  gapless_app_update_test.dart  installed_smoke_test_test.dart  macos_configuration_test.dart
test/helpers/: fake_process_runner.dart  native_process_host_test_support.dart  tolerant_golden_comparator.dart
tool/branding/: generate_app_icons.dart
tool/engine/: fetch_engine.dart
tool/hooks/: pre-commit
tool/release/: generate_sbom.dart  stamp_installed_engine.dart  tool_manifest.json  validate_release_version.dart  (+1 more)
windows/: CMakeLists.txt
(+124 files in other folders)
